# MSellers

./: DockerfileCelery  Makefile  docker-compose-dev.yml  pyproject.toml
backend/: .env  Dockerfile  alembic.ini  requirements.txt
backend/alembics/: env.py
backend/alembics/versions/: 2023-06-13_add_user_model.py
backend/app/: config.py  database.py  main.py  models.py  routers.py
backend/app/api/: routers.py
backend/app/api/endpoints/: user.py
backend/app/core/: config.py  db.py  user.py
backend/app/user/: models.py  router.py  service.py  utils.py
